[package]
name = "hangman1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = {version = "0.11.24", features = ["json", "blocking", "gzip", "deflate"]}